# serializer version: 1
# name: test_core_3x1treino_seed17
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Dead Bug C/ Anilha',
            'V-Up Unilateral',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Prancha Bola',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'core(3)',
    }),
  ])
# ---
# name: test_costas_4x1treino_seed9
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Barra Fixa',
            'Remada Landmine',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Remada Uni Polia',
            'Puxada Aberta',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'costas(4)',
    }),
  ])
# ---
# name: test_full_body_4treinos_seed1
  list([
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Adução Polia',
          'familia': 'Adução quadril',
          'tipo': 'familia_repetida',
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'abduction',
          'escopo_demanda': 'abduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 2,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Lev. Terra Sumô',
            'Puxada Supinada',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Passada Dos Steps',
            'Apoio Ajoelhado',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Remada Curvada Barra',
            'Adução Polia',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenv. Halteres Uni.',
            'Side Clams',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Dead Bug C/ Bola',
          ]),
        }),
      ]),
      'relaxados': list([
        'Adução Polia',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Desenvolvimento Smith',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Remada Aberta Trx',
            'Stiff Uni. Smith',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Com Barra',
            'Desloc. Lateral c/ Band',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenvolvimento Smith',
            'Slide Board Lateral',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Barra Isométrica',
            'Copenhagen Adduction',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Pallof Press',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenvolvimento Smith',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'exercicio': 'Desenv. Halteres Sentado',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Puxada Aberta',
          'familia': 'Puxada',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Supino Com Anilha',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Hip Thrust',
            'Remada Baixa Neutra',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Com Anilha',
            'Leg Press',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Abdução Polia',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Puxada Aberta',
            'Prancha Lateral',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenv. Halteres Sentado',
        'Puxada Aberta',
        'Supino Com Anilha',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_bilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'abduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Abdução Polia',
            'Abdução quadril',
            'Desloc. Lateral c/ Band',
            'Side Clams',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'exercicio': 'Supino Com Halteres',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Com Halteres',
            'Step Up',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Serrote',
            'Ponte Alternada',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenvolvimento Barra',
            'Hollow Hold',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Pullover Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
        'Supino Com Halteres',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
  ])
# ---
# name: test_hinge_2_squat_unilateral_2_seed19
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Recuo C/ Barra',
            'Ponte',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Stiff Uni. Smith',
            'Slide Board Lateral',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'hinge(2) + squat(2)',
    }),
  ])
# ---
# name: test_max_complexidade_baixa_seed29
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Puxada Supinada',
            'Desenv. Landmine',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Crossover Sentado',
            'Elevação Frontal Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(4)',
    }),
  ])
# ---
# name: test_peito_3x2treinos_seed13
  list([
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Supino Com Anilha',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Com Anilha',
            'Crossover',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Apoio Elevado',
          ]),
        }),
      ]),
      'relaxados': list([
        'Supino Com Anilha',
      ]),
      'tipo': 'peito(3)',
    }),
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Supino Com Halteres',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Smith Inclinado',
            'Crucifixo Halteres',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Com Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
        'Supino Com Halteres',
      ]),
      'tipo': 'peito(3)',
    }),
  ])
# ---
# name: test_perna_anterior_3x3treinos_seed3
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Agachamento Livre',
            'Passada',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Agachamento Búlgaro',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_anterior(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Walking Lunges',
            'Box Jump',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Agach. Lateral',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_anterior(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Recuo C/ Barra',
            'Cadeira Extensora',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Step Up Alt.',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_anterior(3)',
    }),
  ])
# ---
# name: test_perna_posterior_2x2treinos_seed5
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Flexão Joelhos Slide',
            'Abdução Polia',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_posterior(2)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Desloc. Lateral c/ Band',
            'Ponte Uni. Caixa',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_posterior(2)',
    }),
  ])
# ---
# name: test_template_empurrar_puxar_seed7
  list([
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Desenvolvimento Barra',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Apoio',
          'familia': 'Apoio',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Com Anilha',
            'Lev. Terra Anilha',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Apoio',
            'Flexão Joelhos Feijão',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenvolvimento Smith',
            'Prancha Slideboard',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenvolvimento Barra',
            'Hip Thrust C/ Band',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Crossover',
            'Abdução Polia',
          ]),
        }),
        dict({
          'label': 'F',
          'nomes': list([
            'Tríceps Coice Polia',
            'Hollow Hold',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenvolvimento Barra',
        'Apoio',
      ]),
      'tipo': 'empurrar_compostos(2) + empurrar_isolados(1) + ombro_composto(2) + hinge(2) + knee_flexion(1) + abduction(1) + core_isometrico(2) + triceps(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Desenv. Halteres Sentado',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Apoio Elevado',
          'familia': 'Apoio',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Stiff Barra Livre',
            'Desenv. Halteres Sentado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Apoio Ajoelhado',
            'Cadeira Flexora',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Apoio Elevado',
            'Dead Bug',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenv. Halteres Uni.',
            'Side Clams',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Crucifixo Halteres',
            'Pallof Press',
          ]),
        }),
        dict({
          'label': 'F',
          'nomes': list([
            'Tríceps Mergulho Banco',
            'Ponte Unilateral',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenv. Halteres Sentado',
        'Apoio Elevado',
      ]),
      'tipo': 'empurrar_compostos(2) + empurrar_isolados(1) + ombro_composto(2) + hinge(2) + knee_flexion(1) + abduction(1) + core_isometrico(2) + triceps(1)',
    }),
  ])
# ---
# name: test_triceps_2_filtro_familia_relax_seed23
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Tríceps Mergulho Banco',
            'Tríceps Coice Polia',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'triceps(2)',
    }),
  ])
# ---
# name: test_upper_3_lower_2_core_2_3treinos_seed42
  list([
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Supino Com Halteres',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Good Morning',
            'Puxada Neutra',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Com Halteres',
            'V-Up',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenv. Landmine',
            'Roda Abdominal',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Box Jump',
          ]),
        }),
      ]),
      'relaxados': list([
        'Supino Com Halteres',
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Leg Press',
            'Apoio Ajoelhado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Flexão Joelhos Slide',
            'Elevação Lateral Sentado',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Pullover Halteres',
            'Dead Bug C/ Bola',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Canoinha',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Barra Fixa',
            'Agachamento Goblet',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Com Barra',
            'Desloc. Lateral c/ Band',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Prancha Feijao',
            'Elevação Frontal Anilha',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Abd Bicicleta',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
  ])
# ---
# name: test_upper_3x2treinos_seed11
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Barra Fixa',
            'Desenv. Halteres Sentado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Crossover',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Puxada Supinada',
            'Apoio',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Desenv. Halteres Uni.',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3)',
    }),
  ])
# ---
